--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <p>For more information on shark history click <a href=history.html>HERE</a>
         </p>
         <p>To learn more about the different types of sharks click <a href=types.html>HERE</a></p>
+        <p>CLick here for fun facts! <a href=jquery.html>JQuery</a></p>
     </section>
 
     <footer>
