--- a/history.html
+++ b/history.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Types of Sharks</title>
     <link rel="stylesheet" href="styles.css"
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -24,6 +33,18 @@ Sharks have been around for over 400 million years, making them one of the oldes
 
     </section>
 <img src="https://www.isu.edu/media/publications/headlines/september-2018/Buzzsaw_PressReleaseImage-copy.jpg" alt="">
+<div class="container">
+    <h2>Pagination - Active State</h2>
+    <p>Add class .active to let the user know which page he/she is on:</p>
+    <ul class="pagination">
+      <li><a href="index.html">1</a></li>
+      <li><a href="bootstrap.html">2</a></li>
+      <li class="active"><a href="history.html">3</a></li>
+      <li><a href="types.html">4</a></li>
+      <li><a href="jquery.html">5</a></li>
+      <li><a href="materialize.html">6</a></li>
+    </ul>
+  </div>
     <footer>
         <p>Contact us: info@sharksrcool.com | &copy; 2024 sharksRcool</p>
     </footer>
