--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Types of Sharks</title>
     <link rel="stylesheet" href="styles.css"
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -41,9 +50,20 @@
         <p>For more information on shark history click <a href=history.html>HERE</a>
         </p>
         <p>To learn more about the different types of sharks click <a href=types.html>HERE</a></p>
-        <p>Click here for fun facts! <a href=jquery.html>JQuery</a></p>
+        <p>CLick here for fun facts! <a href=jquery.html>JQuery</a></p>
     </section>
-
+    <div class="container">
+        <h2>Pagination - Active State</h2>
+        <p>Add class .active to let the user know which page he/she is on:</p>
+        <ul class="pagination">
+          <li class="active"><a href="index.html">1</a></li>
+          <li><a href="bootstrap.html">2</a></li>
+          <li><a href="history.html">3</a></li>
+          <li><a href="types.html">4</a></li>
+          <li><a href="jquery.html">5</a></li>
+          <li><a href="materialize.html">6</a></li>
+        </ul>
+      </div>
     <footer>
         <p>Contact us: info@sharksrcool.com | &copy; 2024 sharksRcool</p>
     </footer>
