--- a/types.html
+++ b/types.html
@@ -6,6 +6,15 @@
     <title>Types of Sharks</title>
     <link rel="stylesheet" href="styles.css"> 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -149,7 +158,19 @@
         });
   
    </script>
- 
+    <div class="container">
+        <h2>Pagination - Active State</h2>
+        <p>Add class .active to let the user know which page he/she is on:</p>
+        <ul class="pagination">
+          <li><a href="index.html">1</a></li>
+          <li><a href="bootstrap.html">2</a></li>
+          <li><a href="history.html">3</a></li>
+          <li class="active"><a href="types.html">4</a></li>
+          <li><a href="jquery.html">5</a></li>
+          <li><a href="materialize.html">6</a></li>
+        </ul>
+      </div>
+    
 
     <footer>
         <p>Contact us: info@sharksrcool.com | &copy; 2024 sharksRcool</p>
