--- a/bootstrap.html
+++ b/bootstrap.html
@@ -14,7 +14,17 @@
 </head>
 <body>
 
-
+    <div class="container">
+      
+        <ul class="pagination">
+          <li><a href="index.html">Home</a></li>
+          <li class="active"><a href="bootstrap.html">Bootstrap</a></li>
+          <li><a href="history.html">History</a></li>
+          <li><a href="types.html">Types</a></li>
+          <li><a href="jquery.html">JQuery</a></li>
+          <li><a href="materialize.html">Materialize</a></li>
+        </ul>
+      </div>
     <div class="container">
         <div class="jumbotron">
           <h1>Sharks R Cool</h1>      
@@ -101,17 +111,5 @@
     </form>
   </div>
 </div>
-<div class="container">
-    <h2>Pagination - Active State</h2>
-    <p>Add class .active to let the user know which page he/she is on:</p>
-    <ul class="pagination">
-      <li><a href="index.html">1</a></li>
-      <li class="active"><a href="bootstrap.html">2</a></li>
-      <li><a href="history.html">3</a></li>
-      <li><a href="types.html">4</a></li>
-      <li><a href="jquery.html">5</a></li>
-      <li><a href="materialize.html">6</a></li>
-    </ul>
-  </div>
 </body>
 </html>
