--- a/history.html
+++ b/history.html
@@ -17,12 +17,21 @@
 </head>
 
 <body>
-
+ 
     <header>
         <h1>History of sharks</h1>
-        <a href=index.html>HOME</a>
+       
     </header>
-
+    <div class="container">
+        <ul class="pagination">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="bootstrap.html">Bootstrap</a></li>
+          <li class="active"><a href="history.html">History</a></li>
+          <li><a href="types.html">Types</a></li>
+          <li><a href="jquery.html">JQuery</a></li>
+          <li><a href="materialize.html">Materialize</a></li>
+        </ul>
+      </div>
     <section>
         <p>
            
@@ -33,18 +42,6 @@ Sharks have been around for over 400 million years, making them one of the oldes
 
     </section>
 <img src="https://www.isu.edu/media/publications/headlines/september-2018/Buzzsaw_PressReleaseImage-copy.jpg" alt="">
-<div class="container">
-    <h2>Pagination - Active State</h2>
-    <p>Add class .active to let the user know which page he/she is on:</p>
-    <ul class="pagination">
-      <li><a href="index.html">1</a></li>
-      <li><a href="bootstrap.html">2</a></li>
-      <li class="active"><a href="history.html">3</a></li>
-      <li><a href="types.html">4</a></li>
-      <li><a href="jquery.html">5</a></li>
-      <li><a href="materialize.html">6</a></li>
-    </ul>
-  </div>
     <footer>
         <p>Contact us: info@sharksrcool.com | &copy; 2024 sharksRcool</p>
     </footer>
