--- a/index.html
+++ b/index.html
@@ -21,7 +21,16 @@
     <header>
         <h1>Welcome to the Shark World</h1>
     </header>
-
+    <div class="container">
+        <ul class="pagination">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="bootstrap.html">Bootstrap</a></li>
+          <li><a href="history.html">History</a></li>
+          <li><a href="types.html">Types</a></li>
+          <li><a href="jquery.html">JQuery</a></li>
+          <li><a href="materialize.html">Materialize</a></li>
+        </ul>
+      </div>
     <section>
         <h2>About Sharks</h2>
         <p>
@@ -52,18 +61,7 @@
         <p>To learn more about the different types of sharks click <a href=types.html>HERE</a></p>
         <p>CLick here for fun facts! <a href=jquery.html>JQuery</a></p>
     </section>
-    <div class="container">
-        <h2>Pagination - Active State</h2>
-        <p>Add class .active to let the user know which page he/she is on:</p>
-        <ul class="pagination">
-          <li class="active"><a href="index.html">1</a></li>
-          <li><a href="bootstrap.html">2</a></li>
-          <li><a href="history.html">3</a></li>
-          <li><a href="types.html">4</a></li>
-          <li><a href="jquery.html">5</a></li>
-          <li><a href="materialize.html">6</a></li>
-        </ul>
-      </div>
+
     <footer>
         <p>Contact us: info@sharksrcool.com | &copy; 2024 sharksRcool</p>
     </footer>
