--- a/jquery.html
+++ b/jquery.html
@@ -65,16 +65,19 @@
 <title>Fun Facts</title>
 </head>
 <body>
+    <div class="container">
+        <ul class="pagination">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="bootstrap.html">Bootstrap</a></li>
+          <li><a href="history.html">History</a></li>
+          <li><a href="types.html">Types</a></li>
+          <li class="active"><a href="jquery.html">JQuery</a></li>
+          <li><a href="materialize.html">Materialize</a></li>
+        </ul>
+      </div>
 <header>
    <h1>Fun Facts</h1>
   
-   <div class="navbar">
-       <a href="index.html">Home</a>
-       <a href="types.html">Types</a>
-       <a href="history.html">History</a>
-       <a href="materialize.html">Materialize</a>
-       <a href="jquery.html">JQuery</a>
-   </div>
 
 </header>
     <body>
@@ -106,18 +109,7 @@
                 
                 </section>
         </main>
-        <div class="container">
-            <h2>Pagination - Active State</h2>
-            <p>Add class .active to let the user know which page he/she is on:</p>
-            <ul class="pagination">
-              <li><a href="index.html">1</a></li>
-              <li><a href="bootstrap.html">2</a></li>
-              <li><a href="history.html">3</a></li>
-              <li><a href="types.html">4</a></li>
-              <li class="active"><a href="jquery.html">5</a></li>
-              <li><a href="materialize.html">6</a></li>
-            </ul>
-          </div>
+      
         <footer>
             <p>Contact us: info@sharksrcool.com | &copy; 2024 sharksRcool</p>
         </footer>
